# inferguard

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  blaxel.toml  mkdocs.yml  pyproject.toml  serve.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml  layer-lint.yml  release-gate.yml  release-tag-gate.yml  release.yml
blaxel_agent/: __init__.py  app.py  brain.py  daytona_client.py  pyproject.toml  rlm_decomposer.py
blaxel_agent/canary_scripts/: am_compaction_canary.py
demo/: README.md  impact.py  mock_endpoint.py  mock_openai_server.py  replay_harness.py  run_demo.py  ui.py
demo/static/: index.html
docs/: ANALYZE.md  ARCHITECTURE.md  CLI_REFERENCE.md  HARDWARE_COVERAGE.md  HARNESS.md  SCHEMAS.md  SPEC.md  SUPPORTED_ENGINES.md  SUPPORTED_INPUTS.md  TROUBLESHOOTING.md  index.md
docs/examples/: README.md
docs/getting-started/: install.md  quick-start.md
docs/guides/: analyze.md  harness.md  lmcache-compatibility.md  lmcache-coverage-plan.md  observability-coverage-matrix.md  troubleshooting.md
docs/how-this-works/: overview.md
docs/images/: README.md
docs/prompts/: 2026-05-11-inferguard-pr3255-downstream-h100-v0.1.md  2026-05-11-inferguard-pypi-0.7.4-release-pr3255-v0.1.md  2026-05-11-packet-b-post-rebase-health-blocker-triage-v0.1.md  2026-05-11-post-rebase-modal-h100-release-smoke-v0.1.md  2026-05-12-inferguard-0.7.4-oss-sdlc-docs-v0.1.md  2026-05-12-inferguard-cli-capture-sglang-lmcache-mp-v0.1.md  2026-05-12-inferguard-sglang-lmcache-embedded-correction-v0.1.md  2026-05-12-inferguard-sglang-lmcache-mp-complete-acceptance-v0.2.md  2026-05-12-inferguard-sglang-lmcache-mp-observability-v0.1.md  2026-05-12-inferguard-sglang-lmcache-support-v0.1.md  2026-05-12-inferguard-sglang-lmcache-version-provenance-v0.1.md
docs/reference/: amd-cdna-hardware-coverage.md  api.md  cli.md  hardware-coverage.md  profiler-bridge.md  schemas.md  supported-engines.md  supported-inputs.md
docs/schemas/: agent-trace-v1.md  dcgm-correlated-v1.md
docs/sdlc/: ROLLBACK.md  amd-cdna3-cdna4-disaggregated-inference-support-plan-v0.1.md  final-real-h100-release-smoke-report-v0.1.md  final-real-h100-release-smoke-spec-v0.1.md  inferguard-cli-h100-doc-update-spec-v0.1.md  lc1-c1-long-context-agent-kv-offload-spec-v0.1.md  lmcache-remaining-g1-h-dlm-i1-coverage-report-v0.1.md  lmcache-sglang-mooncake-all-backends-integration-spec-v0.1.md  lmcache-vendor-neutral-observability-100-coverage-spec-v0.2.md  lmcache-vllm-dlm-all-packets-cost-gated-h100-validation-spec-v0.1.md  lmcache-vllm-l0-block-telemetry-private-fork-run-spec-v0.1.md  lmcache-vllm-l0-lifecycle-production-readiness-spec-v0.1.md  mooncake-dlm-diagnostic-classification-report-v0.1.md  open-source-commit-hygiene-spec-v0.1.md  packet-b-modal-h100-live-validation-report-v0.1.md  packet-b-modal-h100-live-validation-run-spec-v0.1.md  packet-b-post-rebase-health-blocker-triage-v0.1.md  packet-c-modal-h100-live-validation-accepted-report-v0.1.md  packet-c-modal-h100-live-validation-blocked-report-v0.1.md  packet-d-e-f-modal-h100-live-validation-accepted-report-v0.1.md  packet-h1-lmcache-runtime-deps-blocked-report-v0.3.md  packet-h1-lmcache-runtime-deps-blocked-report-v0.4.md  packet-h1-modal-h100-live-validation-blocked-report-v0.1.md  packet-h1-tokenizer-runtime-blocked-report-v0.2.md  packet-h2-h3-cost-gated-blocked-report-v0.2.md  packet-h2-h3-cost-gated-blocked-report-v0.3.md  packet-h3-cacheblend-constantlist-rpc-blocked-report-v0.7.md  packet-h3-cacheblend-live-accepted-report-v0.9.md  packet-h3-cacheblend-non-sparse-attention-rope-blocked-report-v0.5.md  packet-h3-cacheblend-retrieve-layer-no-keys-blocked-report-v0.8.md  packet-h3-cacheblend-rope-rotary-dim-blocked-report-v0.6.md  packet-h3-cacheblend-vllm-registration-fixed-flashinfer-blocked-report-v0.4.md  post-rebase-real-h100-release-smoke-report-v0.1.md  pr3255-packet-b-downstream-h100-measured-report-v0.1.md  sglang-lmcache-mp-observability-source-backed-report-v0.1.md  sglang-lmcache-support-reconciliation-report-v0.1.md  vllm-lmcache-focus-backend-expansion-paused-spec-v0.1.md
docs/system-design/: architecture.md  spec.md
docs/telemetry/: posture.md  spec.md
examples/: 01-validate-synthetic-run.md  02-profile-real-endpoint.md
examples/requests/: profile-mock.jsonl
scripts/: check_docs_links.py  launch_sglang_gb200_disagg_gmi.sh  launch_sglang_gmi.sh  launch_vllm_b200_gmi.sh  launch_vllm_gb200_disagg_gmi.sh  launch_vllm_gmi.sh  launch_vllm_h100_gmi.sh  launch_vllm_h200_gmi.sh  lmcache_embedded_advanced_modal_packet_lab.py  lmcache_embedded_advanced_packet_commands.py  lmcache_mp_modal_packet_lab.py  lmcache_mp_packet_commands.py  modal_dispatch_smoke.py  run_dcgm_correlated.sh  run_dsv4_smoke.sh  run_isb1_campaign.sh  run_offload_sweep.sh  scan_no_stubs.py  scan_release_bundle.py
tests/: conftest.py  test_agent.py  test_agent_trace.py  test_agentx_adapter.py  test_agentx_slurm_matrix.py  test_analyze_intvty.py  test_analyze_plots.py  test_analyze_tput_per_gpu.py  test_bench_agentx_bridge.py  test_bench_arrival.py  test_bench_client.py  test_bench_compare.py  test_bench_cpu_split.py  test_bench_runner_analyze.py  test_bench_schema.py  test_bench_tool_sim.py  test_bench_upstream.py  test_cacheblend_coverage_gaps.py  test_cacheblend_report_cli.py  test_claim_status_discipline.py  test_classify_failures.py  test_cli_analyze.py  test_cli_bench.py  test_cli_disagg.py  test_cluster_daemon.py  test_collect_metrics.py  test_compat_serde.py  test_cost_model.py  test_daemon.py  test_dcgm_correlate.py  test_diagnose_bottleneck.py  test_disagg_adapter_agentx_fields.py  test_disagg_adapters.py  test_disagg_detect.py  test_disagg_types.py  test_exporters_agentx_shape.py  test_exporters_rlm_trace.py  test_find_cliffs.py  test_harness_env.py  test_impact.py  (+51 more)
(+715 files in other folders)
