[project]
name = "inferguard-blaxel-agent"
version = "0.1.0"
description = "InferGuard v6 L3 Blaxel agent brain"
requires-python = ">=3.11"
dependencies = [
  "rlm",
  "daytona-sdk",
  "blaxel",
  "httpx",
  "structlog",
  "fastapi",
  "uvicorn",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

